add jfx importer